Fixed Pojo's Getter and Setter
git-svn-id: http://svn.encuesta.me/trunk/encuestame@218 39e2479b-dd58-4041-9f67-69c9b71f0610